--- a/location/templates/location/request_location.html
+++ b/location/templates/location/request_location.html
@@ -1,16 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-<h1>REQUEST LOCATION</h1>
-<form action="." method="POST">
-  {% csrf_token %}
-  {{ form.as_p }}
-  <button type="submit" value="Request Location">Request Location!</button>
-</form>
+{% extends 'base_dark.html' %}
 
-</body>
-</html>
+{% block title %}
+  Request Location
+{% endblock title %}
+
+
+{% block main %}
+  <h1>REQUEST LOCATION</h1>
+  <form action="." method="POST">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit" value="Request Location">Request Location!</button>
+  </form>
+{% endblock main %}
