--- a/location/templates/location/show_location.html
+++ b/location/templates/location/show_location.html
@@ -1,11 +1,81 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-<h1>SHOW LOCATION</h1>
+{% extends 'base_dark.html' %}
 
-</body>
-</html>
+{% block title %}
+  SHOW LOCATION
+{% endblock title %}
+
+
+{% block main %}
+  <h1 id="status">LOCATING</h1>
+  <h2>{{ location.phone }}</h2>
+  <div id="details" style="display:none">
+    <h2>Latitude: <span id="lat_span"></span></h2>
+    <h2>Longitude: <span id="long_span"></span></h2>
+    <iframe width="100%" height="450" frameborder="0" style="border:0"
+            src="https://www.google.com/maps/embed/v1/place?q=39.9287216,-86.0301646&amp;key=AIzaSyCdWrdDiS7DCeer-8Apuo4d9eP0RQ6KpLc"></iframe>
+  </div>
+
+  <div id="loader_1" class="spinner" style="display: none"></div>
+  <div id="loader_2" class="loading-parent">
+    <div class="loading">
+      <span>L</span><span>o</span><span>c</span><span>a</span><span>t</span><span>i</span><span>n</span><span>g</span>
+    </div>
+  </div>
+
+
+{% endblock main %}
+
+{% block page_javascript %}
+  <script>
+
+    $(function () {
+      var found = false;
+      var count = 0;
+
+      var myVar = setInterval(function () {
+        poll_location()
+      }, 2000);
+
+      function poll_location() {
+        console.log('polling');
+        $.post('{{ location.get_poll_url }}', {}, function (data) {
+          if (data !== '') {
+            console.log('search: ' + count.toString());
+            if (data['status'] === 'found') {
+              console.log('found: ' + count.toString());
+              updateStatus('located');
+              updateLongLat(data['longitude'], data['latitude']);
+              hideLoaders();
+              myStopFunction();
+            } else if (data['status'] === 'not found') {
+              console.log('not found: ' + count.toString());
+            }
+          }
+        });
+      }
+
+      function myStopFunction() {
+        clearInterval(myVar);
+      }
+
+      function updateStatus(str) {
+        $('#status').html(str.toUpperCase());
+      }
+
+      function updateLongLat(long, lat) {
+        $('#long_span').html(long.toString());
+        $('#lat_span').html(lat.toString());
+      }
+
+      function hideLoaders() {
+        $('#loader_1, #loader_2').fadeOut(function () {
+          $('#details').fadeIn();
+        });
+
+      }
+
+    });
+
+
+  </script>
+{% endblock page_javascript %}
