--- a/project/templates/pages/home.html
+++ b/project/templates/pages/home.html
@@ -1,1 +1,28 @@
-{% extends "base.html" %}
+{% extends "base_dark.html" %}
+
+{% block title %}
+  txtLocation
+{% endblock title %}
+
+
+{% block main %}
+  <div style="margin-top: 20%;">
+    <h3 >In an emergency,</h3>
+    <h3>every second matters.</h3>
+    <br><br>
+    <h3>Emergencies don't have time to download</h3>
+    <h3><i class="text-danger">the next new app</i></h3>
+    <br><br>
+    <h3>txtLocation is a 911 location tracker that is:</h3>
+    <ul style="list-style-type: none;">
+      <li><h4>_ Universal/Platform Independent</h4></li>
+      <li><h4>_ Installation Free</h4></li>
+      <li><h4>_ Usable in existing applications via our <a href="#">API</a></h4></li>
+    </ul>
+    <h3>
+
+  </h3>
+  </div>
+
+{% endblock main %}
+
