--- a/location/templates/location/request_location.html
+++ b/location/templates/location/request_location.html
@@ -1,4 +1,5 @@
 {% extends 'base_dark.html' %}
+{% load crispy_forms_tags %}
 
 {% block title %}
   Request Location
@@ -9,7 +10,7 @@
   <h1>REQUEST LOCATION</h1>
   <form action="." method="POST">
     {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit" value="Request Location">Request Location!</button>
+    {{ form|crispy }}
+    <button class="btn btn-block btn-danger" type="submit" value="Request Location">Request Location!</button>
   </form>
 {% endblock main %}
