--- a/project/static/css/grayscale.css
+++ b/project/static/css/grayscale.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Lora', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
   position: relative;
   width: 100%;
   height: 100%;
@@ -22,7 +22,6 @@ h6 {
   font-weight: 700;
   margin: 0 0 35px;
   letter-spacing: 1px;
-  text-transform: uppercase;
 }
 
 p {
@@ -54,7 +53,6 @@ a:focus, a:hover {
 #mainNav {
   font-family: 'Cabin', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   margin-bottom: 0;
-  text-transform: uppercase;
   border-bottom: 1px solid rgba(255, 255, 255, 0.3);
   background-color: black;
 }
@@ -375,3 +373,12 @@ img::-moz-selection {
   align-items: center;
 }
 
+.font-light {
+  font-weight: 100 !important;
+  font-size: .9em;
+}
+
+.font-heavy {
+  font-weight: 700;
+  font-size: 1.2em;
+}
