--- a/project/templates/base_dark.html
+++ b/project/templates/base_dark.html
@@ -9,8 +9,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
+
+  {% block extend_head %}
+
+  {% endblock extend_head %}
+
+
   <title>{{ title }}</title>
   <!-- Bootstrap core CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+
   <!-- Esri Maps link and script -->
   <!-- Custom fonts for this template -->
 
@@ -24,6 +32,38 @@
 </head>
 
 <body id="page-top">
+
+
+
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+      <div class="container">
+        <a class="navbar-brand js-scroll-trigger" href="#page-top"><span class="font-light">txt</span><span class="font-heavy">Location</span></a>
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          Menu
+          <i class="fa fa-bars"></i>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="{% url 'home' %}">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="{% url 'location:request' %}">Try It!</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="{% url 'api' %}">API</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="{% url 'about' %}">About</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+
+
 
 <div class="intro-body">
   <div class="container">
@@ -39,9 +79,6 @@
     </div>
   </div>
 </div>
-
-
-
 
 
 <!-- Bootstrap core JavaScript -->
