--- a/project/templates/pages/about.html
+++ b/project/templates/pages/about.html
@@ -1,1 +1,18 @@
-{% extends "base.html" %}
+{% extends "base_dark.html" %}
+
+{% block title %}
+  txtLocation
+{% endblock title %}
+
+
+{% block main %}
+  <div style="margin-top: 20%;">
+    <h3 >Created by:</h3>
+    <h2 class="text-danger">Matthew &amp; Stephen Knapper</h2>
+    <br><br>
+    <h4 >Using:</h4>
+    <h4>Python, Django, Heroku, AWS, ESRI, JQuery, &amp; Bootstrap</h4>
+    <br><br>
+    <h3 class="text-warning">#CivicHacks</h3>
+  </div>
+{% endblock main %}
