--- a/location/templates/location/show_location.html
+++ b/location/templates/location/show_location.html
@@ -4,16 +4,35 @@
   SHOW LOCATION
 {% endblock title %}
 
+{% block extend_head %}
+  <link rel="stylesheet" href="https://js.arcgis.com/4.7/esri/css/main.css">
+
+
+  <style>
+    html,
+    body,
+    #viewDiv {
+      padding: 0;
+      margin: 0;
+      height: 50%;
+      width: 100%;
+    }
+  </style>
+{% endblock extend_head %}
+
 
 {% block main %}
   <h1 id="status">LOCATING</h1>
   <h2>{{ location.phone }}</h2>
+
   <div id="details" style="display:none">
     <h2>Latitude: <span id="lat_span"></span></h2>
     <h2>Longitude: <span id="long_span"></span></h2>
-    <iframe width="100%" height="450" frameborder="0" style="border:0"
-            src="https://www.google.com/maps/embed/v1/place?q=39.9287216,-86.0301646&amp;key=AIzaSyCdWrdDiS7DCeer-8Apuo4d9eP0RQ6KpLc"></iframe>
+{#    <iframe width="100%" height="450" frameborder="0" style="border:0"#}
+{#            src="https://www.google.com/maps/embed/v1/place?q=39.9287216,-86.0301646&amp;key=AIzaSyCdWrdDiS7DCeer-8Apuo4d9eP0RQ6KpLc"></iframe>#}
   </div>
+
+
 
   <div id="loader_1" class="spinner" style="display: none"></div>
   <div id="loader_2" class="loading-parent">
@@ -21,12 +40,17 @@
       <span>L</span><span>o</span><span>c</span><span>a</span><span>t</span><span>i</span><span>n</span><span>g</span>
     </div>
   </div>
-
-
 {% endblock main %}
 
+{% block no_containers %}
+<div id="viewDiv"></div>
+{% endblock no_containers %}
+
 {% block page_javascript %}
+  <script src="https://js.arcgis.com/4.7/"></script>
   <script>
+    var esri_long = 0.0;
+    var esri_lat = 0.0;
 
     $(function () {
       var found = false;
@@ -63,8 +87,11 @@
       }
 
       function updateLongLat(long, lat) {
+        esri_long = long;
+        esri_lat = lat;
         $('#long_span').html(long.toString());
         $('#lat_span').html(lat.toString());
+        display_map();
       }
 
       function hideLoaders() {
@@ -76,6 +103,56 @@
 
     });
 
+    function display_map() {
+      require([
+      "esri/Map",
+      "esri/views/MapView",
+      "esri/Graphic",
+      "dojo/domReady!"
+    ], function(
+      Map, MapView, Graphic
+    ) {
 
+      var map = new Map({
+        basemap: "streets"
+      });
+
+      var view = new MapView({
+        center: [esri_long, esri_lat],
+        container: "viewDiv",
+        map: map,
+        zoom: 14
+      });
+
+      /*************************
+       * Create a point graphic
+       *************************/
+      var point = {
+        type: "point", // autocasts as new Point()
+        longitude: -86.008366,
+        latitude: 39.966847
+      };
+
+      // Create a symbol for drawing the point
+      var markerSymbol = {
+        type: "simple-marker", // autocasts as new SimpleMarkerSymbol()
+        color: [226, 119, 40],
+        outline: { // autocasts as new SimpleLineSymbol()
+          color: [255, 255, 255],
+          width: 2
+        }
+      };
+
+      // Create a graphic and add the geometry and symbol to it
+      var pointGraphic = new Graphic({
+        geometry: point,
+        symbol: markerSymbol
+      });
+
+      // Add the graphics to the view's graphics layer
+      view.graphics.add(pointGraphic);
+    });
+    }
   </script>
+
 {% endblock page_javascript %}
