--- a/project/templates/base_dark.html
+++ b/project/templates/base_dark.html
@@ -66,7 +66,7 @@
 </nav>
 
 
-<div style="margin-top: 20%;">
+<div style="margin-top: 15%;">
 
   <div class="intro-body">
     <div class="container">
@@ -83,6 +83,9 @@
     </div>
   </div>
 </div>
+
+{% block no_containers %}
+{% endblock no_containers %}
 
 
 <!-- Bootstrap core JavaScript -->
