--- a/project/templates/pages/home.html
+++ b/project/templates/pages/home.html
@@ -18,9 +18,7 @@
       <li><h4>_ Installation Free</h4></li>
       <li><h4>_ Usable in existing applications via our <a href="#">API</a></h4></li>
     </ul>
-    <h3>
-
-  </h3>
+    <h3><a href="{% url 'location:request' %}">Try It Out</a></h3>
 
 {% endblock main %}
 
