adjusted margins on template

--- a/project/templates/base_dark.html
+++ b/project/templates/base_dark.html
@@ -66,7 +66,7 @@
 </nav>
 
 
-<div style="margin-top: 15%;">
+<div style="margin-top: 120px;">
 
   <div class="intro-body">
     <div class="container">
