adjusted esri maps

--- a/location/templates/location/thanks_location.html
+++ b/location/templates/location/thanks_location.html
@@ -65,8 +65,8 @@
        *************************/
       var point = {
         type: "point", // autocasts as new Point()
-        longitude: -86.008366,
-        latitude: 39.966847
+        longitude: esri_long,
+        latitude: esri_lat
       };
 
       // Create a symbol for drawing the point
