fixed brand on home

--- a/project/templates/pages/home.html
+++ b/project/templates/pages/home.html
@@ -12,7 +12,7 @@
     <h3>Emergencies don't have time to download</h3>
     <h3><i class="text-danger">the next new app</i></h3>
     <br><br>
-    <h3>txtLocation is a 911 location tracker that is:</h3>
+  <h3><span class="font-light">txt</span><span class="font-heavy">Location</span> is a 911 location tracker that is:</h3>
     <ul style="list-style-type: none;">
       <li><h4>_ Universal/Platform Independent</h4></li>
       <li><h4>_ Installation Free</h4></li>
