--- a/project/templates/base_dark.html
+++ b/project/templates/base_dark.html
@@ -52,7 +52,7 @@
           <a class="nav-link js-scroll-trigger" href="{% url 'home' %}">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="{% url 'location:request' %}">Try It!</a>
+          <a style="color: #42DCA3" class="nav-link js-scroll-trigger" href="{% url 'location:request' %}">Try It!</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="{% url 'api' %}">API</a>
@@ -66,7 +66,7 @@
 </nav>
 
 
-<div style="margin-top: 15px;">
+<div style="margin-top: 110px;">
 
   <div class="intro-body">
     <div class="container">
