--- a/project/templates/base_dark.html
+++ b/project/templates/base_dark.html
@@ -38,7 +38,7 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
   <div class="container">
-    <a class="navbar-brand js-scroll-trigger" href="#page-top"><span class="font-light">txt</span><span
+    <a class="navbar-brand js-scroll-trigger" href="{% url 'home' %}"><span class="font-light">txt</span><span
       class="font-heavy">Location</span></a>
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
             data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
