--- a/location/templates/location/show_location.html
+++ b/location/templates/location/show_location.html
@@ -1,7 +1,7 @@
 {% extends 'base_dark.html' %}
 
 {% block title %}
-  SHOW LOCATION
+  Show Location
 {% endblock title %}
 
 {% block extend_head %}
