--- a/project/templates/base_dark.html
+++ b/project/templates/base_dark.html
@@ -15,7 +15,7 @@
   {% endblock extend_head %}
 
 
-  <title>{{ title }}</title>
+  <title>{% block title %} txtLocation {% endblock title %}</title>
   <!-- Bootstrap core CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css"
         integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
