added github link

--- a/project/templates/pages/about.html
+++ b/project/templates/pages/about.html
@@ -11,7 +11,7 @@
     <h2 class="text-danger">Matthew &amp; Stephen Knapper</h2>
     <br><br>
     <h4 >Using:</h4>
-    <h4>Python, Django, Heroku, AWS, ESRI, JQuery, &amp; Bootstrap</h4>
+    <h4><a href="https://github.com/mknapper1/txtLocation">Github</a>, Python, Django, Heroku, AWS, ESRI, JQuery, &amp; Bootstrap</h4>
     <br><br>
     <h3 class="text-warning">#CivicHacks</h3>
   </div>
