--- a/project/templates/pages/about.html
+++ b/project/templates/pages/about.html
@@ -10,9 +10,11 @@
     <h3 >Created by:</h3>
     <h2 class="text-danger">Matthew &amp; Stephen Knapper</h2>
     <br><br>
+    <h3 >Repo:</h3>
+    <h3 ><a href="https://github.com/mknapper1/txtLocation">Github</a></h3>
     <h4 >Using:</h4>
     <h4><a href="https://github.com/mknapper1/txtLocation">Github</a>, Python, Django, Heroku, AWS, ESRI, JQuery, &amp; Bootstrap</h4>
     <br><br>
-    <h3 class="text-warning">#CivicHacks</h3>
+    <h3 class="text-warning"><a href="https://twitter.com/hashtag/iotcivichack?lang=en">#IoTCivicHacks</a></h3>
   </div>
 {% endblock main %}
