--- a/project/templates/pages/home.html
+++ b/project/templates/pages/home.html
@@ -25,7 +25,7 @@
         <li>GrandParent Proof!</li>
       </ul>
       </li>
-      <li><h5>_ Usable in existing applications via our <a href="{% url 'api' %}">API</a></h5></li>
+      <li><h5>_ Usable in existing 911 dispatch applications via our <a href="{% url 'api' %}">API</a></h5></li>
       <li><h5>_ Offline with <a href="https://developer.mozilla.org/en-US/docs/Web/Manifest">App Manifest</a></h5></li>
 
     </ul>
